<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/login_logo">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textSize="26sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_are_many_variations_of_passages_of_lorem_ipsum_available"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:textColor="@color/grey_light"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_mobile_number"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_with_the_terms_of_service_and_privacy_policy"
        android:textSize="18sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/grey_light"
        />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        >-->
<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/i_agree_with_the"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:textColor="@color/grey_light"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/terms_of_servicee"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:textColor="@color/grey_light"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/and"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:textColor="@color/grey_light"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/privacy_policy"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:textColor="@color/grey_light"-->
<!--            />-->
<!--    </LinearLayout>-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_upp"
        android:textSize="22sp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>